<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WhereIs</string>
    <string name="title_text">WhereIs</string>
    <string name="ok">Ok</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="desc_login_activity">Login using Google Sign In with a Google REST API</string>
    <string name="name_login_activity">LoginActivity</string>

    <!-- For Login activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Failed to log in.</string>
    <string name="error_during_login">Sorry, an error occurred. Please try again!</string>
    <string name="login_failed">Failed to sign in</string>
    <string name="login_successfull">You are logged in!</string>
    <string name="sign_in_button">Sign in with Google</string>
    <string name="welcome_message">Login with Google to start</string>
    <string name="authentication_error">Authentication error</string>

    <!-- For Create Group activity-->
    <string name="lets_create_new_group">Let\'s create a new group!</string>
    <string name="group_name_field">Group name</string>
    <string name="submit">Submit</string>
    <string name="group_not_created_dialog_message">Error while creating group</string>
    <string name="group_not_created_dialog_title">Group was not created.</string>

    <!-- For Map activity -->
    <string name="user_location_marker">Me</string>
    <string name="user_left_group_dialog_title">Success</string>
    <string name="user_left_group_dialog_message">You\'ve left the group</string>
    <!-- Menu for Map activity -->
    <string name="no_group_menu_item">You are not in the group. Lets create or join one!</string>
    <string name="create_group_menu_item">Create group</string>
    <string name="join_group_menu_item">Join group</string>
    <string name="invite_to_group">Invite to group</string>
    <string name="leave_group_menu_item">Leave group</string>
    <string name="settings_menu_item">Settings</string>
    <string name="sign_out_menu_item">Sign out</string>

    <!-- For Invite To Group activity -->
    <string name="lets_invite_someone">Invite to group</string>
    <string name="invitation_email_field">Email</string>
    <string name="invite_sent_dialog_message">Success!</string>
    <string name="invite_sent_dialog_title">Invite was sent!</string>
    <string name="invite_already_exists_dialog_message">User already invited to this group</string>
    <string name="invite_already_exists_dialog_title">Invite exists</string>

    <!-- For Join Group activity -->
    <string name="lets_join_a_group">Enter group identity token to join</string>
    <string name="group_identity_field">Group identity</string>
    <string name="joined_dialog_message">Let\'s go to map</string>
    <string name="joined_dialog_title">You joined a new group!</string>
    <string name="no_invite_for_user_dialog_message">Invite is required for joining</string>
    <string name="no_invite_for_user_dialog_title">Sorry, you have no invite to this group</string>

    <!-- For Group Info activity -->
    <string name="group_name_label">Group name:</string>
    <string name="group_identity_label">Identity:</string>
</resources>
