<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/lets_join_a_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/lets_join_a_group"
        android:gravity="center"
        android:textSize="36sp" />

    <EditText android:id="@+id/group_identity_field"
        android:layout_weight="1"
        android:layout_width="500dp"
        android:layout_height="0dp"
        android:hint="@string/group_identity_field"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/submit_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>

</LinearLayout>