<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lets_invite_someone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/lets_invite_someone"
        android:gravity="center"
        android:textSize="36sp" />

    <EditText android:id="@+id/invitation_email_field"
        android:layout_weight="1"
        android:layout_width="500dp"
        android:layout_height="0dp"
        android:hint="@string/invitation_email_field"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/submit_invite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>
</LinearLayout>